CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2 FATAL_ERROR)

PROJECT(shm VERSION 0.0.1 LANGUAGES CXX)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -pedantic -Wold-style-cast -Wuninitialized -Wunreachable-code -Wstrict-overflow=3 -D_FORTIFY_SOURCE=2 -ffunction-sections -fdata-sections")
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-O1 -Wl,--hash-style=gnu -Wl,--sort-common -Wl,--gc-sections")

  IF(${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmax-errors=1")
    IF (${CMAKE_BUILD_TYPE} MATCHES "Debug")
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Og -ggdb3 -fno-omit-frame-pointer")
    ENDIF()
  ELSEIF(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ferror-limit=1")
    IF (${CMAKE_BUILD_TYPE} MATCHES "Debug")
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
    ENDIF()
  ENDIF()
ELSE()
  MESSAGE(FATAL_ERROR "Unsupported system")
ENDIF()

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(Boost 1.59.0 REQUIRED)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
ADD_DEFINITIONS(-DBOOST_FILESYSTEM_NO_DEPRECATED)
ADD_DEFINITIONS(-DBOOST_DATE_TIME_NO_LIB)


ADD_EXECUTABLE(attach attach.cc)
TARGET_LINK_LIBRARIES(attach rt ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
TARGET_INCLUDE_DIRECTORIES(attach SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(detach detach.cc)
TARGET_LINK_LIBRARIES(detach rt ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
TARGET_INCLUDE_DIRECTORIES(detach SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(read read.cc)
TARGET_LINK_LIBRARIES(read rt ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
TARGET_INCLUDE_DIRECTORIES(read SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(write write.cc)
TARGET_LINK_LIBRARIES(write rt ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
TARGET_INCLUDE_DIRECTORIES(write SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})
